# rotomtracks-with-supabase

./: .browserslistrc  .env.example  .gitignore  .swcrc  CHANGELOG.md  DATABASE_SETUP.md  DATA_CLEANUP_GUIDE.md  DEPLOYMENT.md  DEPLOY_NOW.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENVIRONMENT_VARIABLES.md  QUICK_DEPLOY.md  README.md  SEARCH_API_IMPLEMENTATION.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vercel.json
app/: critical.css  globals.css  layout.tsx  page.tsx
components/: LazyComponent.tsx  auth-button-client.tsx  auth-button.tsx  enhanced-sign-up-form.tsx  forgot-password-dialog.tsx  forgot-password-form.tsx  language-selector.tsx  login-form-wrapper.tsx  login-form.tsx  logout-button.tsx  organizer-request-modal.tsx  organizer-request-status.tsx  profile-completion-alert.tsx  profile-display.tsx  profile-form.tsx  sign-up-form.tsx  theme-switcher.tsx  update-password-form.tsx  user-menu.tsx
contexts/: AuthContext.tsx
desktop/: .cursorignore  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: api-consistency-guide.md  cleanup-summary.md
hooks/: use-tournament-status.ts
lib/: utils.ts
public/: site.webmanifest
scripts/: add-pokemon-league-url-column.sql  analyze-css.js  analyze-js.js  analyze-unused-js.js  check-table-structure.js  cleanup-profile-image-storage.sql  cleanup-sample-data.js  (+12 more)
(+314 files in other folders)
