[package]
name = "rotomtracks_desktop"
version = "0.1.0"
description = "RotomTracks Desktop"
authors = ["RotomTracks"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

[features]
default = ["custom-protocol"]
custom-protocol = []
